# salign

./: Cargo.toml  LICENSE  README.md
src/: accessor.rs  aligner.rs  filemanager.rs  line.rs  main.rs
